--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             font-weight: bold;
         }
 
-        .grade-A { background-color: #d4edda; color: #155724; }
-        .grade-B { background-color: #cce5ff; color: #004085; }
-        .grade-C { background-color: #fff3cd; color: #856404; }
+        .grade-A { background-color: #50c878; color: #155724; }
+        .grade-B { background-color: #f4c430; color: #004085; }
+        .grade-C { background-color: #c040f0; color: #856404; }
         .grade-D { background-color: #f8d7da; color: #721c24; }
         .grade-F { background-color: #f5c6cb; color: #721c24; }
 
@@ -98,7 +98,7 @@
         </div>
 
         <div class="input-group">
-            <label for="otherTargets">How many OTHER Learning Targets have you mastered? (out of 6)</label>
+            <label for="otherTargets">How many other Learning Targets have you mastered? (out of 6)</label>
             <input type="number" id="otherTargets" min="0" max="6" value="0" oninput="calculateGrade()">
         </div>
 
@@ -107,20 +107,20 @@
         <div class="grading-scale">
             <h3>Grading Scale:</h3>
             <ul>
-                <li><strong>A:</strong> 10 CORE + 4, 5, or 6 OTHER</li>
-                <li><strong>B:</strong> 10 CORE + 2 or 3 OTHER</li>
+                <li><strong>A:</strong> 10 CORE + 4, 5, or 6 other</li>
+                <li><strong>B:</strong> 10 CORE + 2 or 3 other</li>
                 <li><strong>C:</strong> 
                     <ul style="margin-left: 20px; margin-top: 5px;">
-                        <li>10 CORE + 1 OTHER, OR</li>
+                        <li>10 CORE + 1 other, OR</li>
                         <li>10 CORE (no others needed), OR</li>
-                        <li>9 CORE + 4, 5, or 6 OTHER, OR</li>
-                        <li>8 CORE + 5 or 6 OTHER</li>
+                        <li>9 CORE + 4, 5, or 6 other, OR</li>
+                        <li>8 CORE + 5 or 6 other</li>
                     </ul>
                 </li>
                 <li><strong>D:</strong>
                     <ul style="margin-left: 20px; margin-top: 5px;">
-                        <li>9 CORE + 1, 2, or 3 OTHER, OR</li>
-                        <li>8 CORE + 1, 2, 3, or 4 OTHER, OR</li>
+                        <li>9 CORE + 1, 2, or 3 other, OR</li>
+                        <li>8 CORE + 1, 2, 3, or 4 other, OR</li>
                         <li>8 CORE (no others needed)</li>
                     </ul>
                 </li>
