--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html lang="en">
+    <div style="display: flex; justify-content: center;"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -187,4 +189,5 @@
         calculateGrade();
     </script>
 </body>
+    </div>
 </html>
