--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             font-weight: bold;
         }
 
-        .grade-A { background-color: #50c878; color: #155724; }
-        .grade-B { background-color: #f4c430; color: #004085; }
-        .grade-C { background-color: #c040f0; color: #856404; }
-        .grade-D { background-color: #f8d7da; color: #721c24; }
-        .grade-F { background-color: #f5c6cb; color: #721c24; }
+        .grade-A { background-color: #50c878; color: #ffffff; }
+        .grade-B { background-color: orange; color: #004085; }
+        .grade-C { background-color: #c040f0; color: #ffffff; }
+        .grade-D { background-color: pink; color: black; }
+        .grade-F { background-color: red; color: white; }
 
         .grading-scale {
             margin-top: 30px;
@@ -111,16 +111,16 @@
             <ul>
                 <li><strong>A:</strong> 10 CORE + 4, 5, or 6 other</li>
                 <li><strong>B:</strong> 10 CORE + 2 or 3 other</li>
-                <li><strong>C:</strong> 
-                    <ul style="margin-left: 20px; margin-top: 5px;">
-                        <li>10 CORE + 1 other, OR</li>
+                <li><strong>C:</strong> 10 CORE + 1 other, OR
+                    <ul style="margin-left: 20px;">
+                        <li></li>
                         <li>10 CORE (no others needed), OR</li>
                         <li>9 CORE + 4, 5, or 6 other, OR</li>
                         <li>8 CORE + 5 or 6 other</li>
                     </ul>
                 </li>
                 <li><strong>D:</strong>
-                    <ul style="margin-left: 20px; margin-top: 5px;">
+                    <ul style="margin-left: 20px;">
                         <li>9 CORE + 1, 2, or 3 other, OR</li>
                         <li>8 CORE + 1, 2, 3, or 4 other, OR</li>
                         <li>8 CORE (no others needed)</li>
